# Mondela-Ai

./: .gitignore  Makefile  README.md  adversarial_test_suite.py  cargo_toml.txt  docker-compose.yml  docker_infrastructure.txt  implementation_readme.md  ml_chain_v6_blueprint.md  pytest_config.txt  python_miner_sdk.py  python_requirements.txt  requirements.txt  rust_server_core.rs.txt  system_architecture_diagram.mermaid.txt
monitoring/: grafana-dashboards.yml  prometheus.yml
reports/: adversarial.html
server/: Cargo.toml  Dockerfile
server/src/: main.rs
sql/: init.sql
tests/: test_adversarial.py
